@@ -260,7 +260,9 @@ type preferences = {
   browser : string option;
   withdoc : bool;
   byteonly : bool;
-  flambda_flags : string list;
+  caml_flags : string option;
+  camlbyte_flags : string option;
+  camlopt_flags : string option;
   debug : bool;
   profile : bool;
   bin_annot : bool;
@@ -298,7 +300,9 @@ let default = {
   browser = None;
   withdoc = false;
   byteonly = false;
-  flambda_flags = [];
+  caml_flags = None;
+  camlbyte_flags = None;
+  camlopt_flags = None;
   debug = true;
   profile = false;
   bin_annot = false;
@@ -394,8 +398,12 @@ let args_options = Arg.align [
     "<dir> Specifies the path to the Lablgtk library";
   "-camlp5dir", arg_string_option (fun p camlp5dir -> { p with camlp5dir }),
     "<dir> Specifies where is the Camlp5 library and tells to use it";
-  "-flambda-opts", arg_string_list ' ' (fun p flambda_flags -> { p with flambda_flags }),
-    "<flags> Specifies additional flags to be passed to the flambda optimizing compiler";
+  "-camlflags", arg_string_option (fun p caml_flags -> { p with caml_flags }),
+    "<flags> Specifies additional flags to be passed to the ocaml compiler [byte and opt]";
+  "-camlbyteflags", arg_string_option (fun p camlbyte_flags -> { p with camlbyte_flags }),
+    "<flags> Specifies additional flags to be passed to the ocaml compiler [only byte]";
+  "-camloptflags", arg_string_option (fun p camlopt_flags -> { p with camlopt_flags }),
+    "<flags> Specifies additional flags to be passed to the ocaml compiler [only opt]";
   "-arch", arg_string_option (fun p arch -> { p with arch }),
     "<arch> Specifies the architecture";
   "-natdynlink", arg_bool (fun p natdynlink -> { p with natdynlink }),
@@ -1083,6 +1091,8 @@ let config_runtime () =
 let vmbyteflags = config_runtime ()
 
 let esc s = if String.contains s ' ' then "\"" ^ s ^ "\"" else s
+let opt_iter f o = match o with Some x -> f x | _ -> ()
+let opt_dflt d o = match o with Some x -> x | _ -> d
 
 (** * Summary of the configuration *)
 
@@ -1097,7 +1107,9 @@ let print_summary () =
   pr "  OCaml version               : %s\n" caml_version;
   pr "  OCaml binaries in           : %s\n" (esc camlbin);
   pr "  OCaml library in            : %s\n" (esc camllib);
-  pr "  OCaml flambda flags         : %s\n" (String.concat " " !prefs.flambda_flags);
+  opt_iter (pr "  OCaml compiler extra flags  : %s\n") !prefs.caml_flags;
+  opt_iter (pr "  ocamlc   extra flags        : %s\n") !prefs.camlbyte_flags;
+  opt_iter (pr "  ocamlopt extra flags        : %s\n") !prefs.camlopt_flags;
   pr "  Camlp5 version              : %s\n" camlp5_version;
   pr "  Camlp5 binaries in          : %s\n" (esc camlp5bindir);
   pr "  Camlp5 library in           : %s\n" (esc camlp5libdir);
@@ -1158,7 +1170,6 @@ let write_configml f =
   let pr_i = pr "let %s = %d\n" in
   let pr_p s o = pr "let %s = %S\n" s
     (match o with Relative s -> s | Absolute s -> s) in
-  let pr_l  n l = pr "let %s = [%s]\n" n (String.concat ";" (List.map (fun s -> "\"" ^ s ^ "\"") l)) in
   let pr_li n l = pr "let %s = [%s]\n" n (String.concat ";" (List.map string_of_int l)) in
   pr "(* DO NOT EDIT THIS FILE: automatically generated by ../configure *)\n";
   pr "(* Exact command that generated this file: *)\n";
@@ -1198,7 +1209,9 @@ let write_configml f =
   pr "let gtk_platform = `%s\n" !idearchdef;
   pr_b "has_natdynlink" hasnatdynlink;
   pr_s "natdynlinkflag" natdynlinkflag;
-  pr_l "flambda_flags" !prefs.flambda_flags;
+  pr_s "caml_extra_flags" (opt_dflt "" !prefs.caml_flags);
+  pr_s "camlbyte_extra_flags" (opt_dflt "" !prefs.camlbyte_flags);
+  pr_s "camlopt_extra_flags" (opt_dflt "" !prefs.camlopt_flags);
   pr_i "vo_magic_number" vo_magic;
   pr_i "state_magic_number" state_magic;
   pr_s "browser" browser;
@@ -1292,9 +1305,9 @@ let write_makefile f =
   pr "# Caml flags\n";
   pr "CAMLFLAGS=%s %s\n" caml_flags coq_caml_flags;
   pr "# User compilation flag\n";
-  pr "USERFLAGS=\n\n";
-  (* XXX make this configurable *)
-  pr "FLAMBDA_FLAGS=%s\n" (String.concat " " !prefs.flambda_flags);
+  pr "USERFLAGS=%s\n" (opt_dflt "" !prefs.caml_flags);
+  pr "USERBYTEFLAGS=%s\n" (opt_dflt "" !prefs.camlbyte_flags);
+  pr "USEROPTFLAGS=%s\n" (opt_dflt "" !prefs.camlopt_flags);
   pr "# Flags for GCC\n";
   pr "CFLAGS=%s\n\n" cflags;
   pr "# Compilation debug flags\n";
